# PokemonSimulator

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
entity/header/: Ability.h  Field.h  Item.h  Move.h  Nature.h  Player.h  Pokemon.h  Type.h
entity/source/: Ability.cpp  Field.cpp  Item.cpp  Move.cpp  Nature.cpp  Player.cpp  Pokemon.cpp  Type.cpp
src/header/: Game.h  MainProcessor.h
src/main/: main.cpp
src/source/: Game.cpp  MainProcessor.cpp
util/header/: Database.h
util/source/: Database.cpp
